# unicorn-exercise

./: .env.example  README.md  docker-compose.yml  eval_report.txt  pyproject.toml
docs/ExerciseFiles/: inventory_existing_catalog.json  inventory_validity_rules.json  product_matching_eval.json  product_matching_rules.json  product_matching_submissions.json
schema/: 00_init.sql
schema/enums/: category.sql  submission_decision.sql  submission_status.sql
schema/tables/: product.sql  submission.sql
scripts/: eval.sh  ingest.sh  inspect.sh  pretty_submissions.sql
src/db/: connection.py
src/db/queries/product/: find.sql  insert.sql  list_all.sql
src/db/queries/submission/: insert.sql  select_exact_duplicate_groups.sql  select_exact_duplicate_pairs.sql  select_invalid_with_reasons.sql  select_llm_cache.sql  select_near_duplicate_groups.sql  select_pending.sql  select_status_counts.sql  select_unmatched.sql  update_duplicate_match.sql  update_exact_duplicates.sql  update_llm_match.sql  update_match.sql  update_near_duplicates.sql
src/gemini/: client.py  model.py  prompts.py
src/model/: product.py  submission.py
src/pipeline/: ingest.py
src/repository/: product.py  submission.py
src/scripts/: eval_report.py  import_products.py
src/service/: duplicates.py  submission.py
src/service/match/: constants.py  deterministic.py  llm.py
tests/integration/: conftest.py  test_eval.py  test_ingest.py  test_matching.py
tests/unit/: test_matching.py
