[project]
name = "unicorn-exercise"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic>=2.0",
    "ijson>=3.0",
    "python-dotenv>=1.0",
    "google-genai>=0.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode lets unit/ and integration/ both have a test_matching.py
# without needing __init__.py files in the test tree.
addopts = "--import-mode=importlib"
